# voice-agent

./: .gitignore  AGENTS.md  README.md  bench.sh  config.toml  llama-swap-config.yaml  llamacpp-models.ini.example  mcp_servers.toml.example  model_deps.toml  models.ini  models.ini.example  models.toml  preferences.toml.example  pyproject.toml  setup-kokoro-fastapi.sh  setup-llamacpp.sh  setup-qwen3-tts.sh  setup-supertonic.sh  setup-whisper.sh  setup-whispercpp.sh  setup.sh  start-llama.sh  start-llamacpp.sh  start.sh  update-llama.sh  voice_agent.py
voice-agent/: __main__.py  app.py  app.tcss  audio.py  config.py  display.py  gemini_tts.py  mcp.py  pipeline.py  platform_info.py  preferences.py  providers.py  runtimes.py  servers.py  shell.py  widgets.py
voice_agent/: __main__.py  audio.py  config.py  pipeline.py  providers.py  servers.py
voices/: gemini-sulafat-transcription.txt
