[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.41.1,<3",
    "openai-agents[voice]>=0.17.5",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "onnxruntime>=1.26.0",
    "textual>=8.2.7",
]

[project.optional-dependencies]
# The mlx stack is Apple-Silicon-only — the `mlx` package has no Linux
# wheels, which would make `uv sync --extra local` fail on Linux without
# these platform markers. On Linux the MLX portion resolves to an empty list,
# which is correct: llama.cpp and whisper.cpp ship as binaries managed by
# setup-llamacpp.sh / setup-whispercpp.sh, and isolated Linux-capable TTS
# servers install through their own setup scripts rather than this extra.
local = [
    "mlx-audio[server,tts,stt]>=0.4.4; sys_platform == 'darwin'",
    "mlx-vlm>=0.6.3;                   sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
